minor edits in UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Pokemon GO Locations</string>
     <string name="back_button">Back</string>
     <string name="submit_button">Submit</string>
+    <string name="select_your_pokemon">Select Your Pokémon:</string>
+    <string name="select_your_location">Select Your Location:</string>
 </resources>
