--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,13 @@
     <string name="select_your_pokemon">Select Your Pokémon:</string>
     <string name="select_your_location">Select Your Location:</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="location_text_list_view">LOCATION</string>
 
     <!-- Preference Titles -->
     <string name="styling_header">Appearance</string>
     <string name="googleMaps_header">Google Maps</string>
 
-    <!-- Messages Preferences -->
+    <!-- Styling Preferences -->
     <string name="backgroundColor_title">Background color</string>
     <string name="backgroundColor_summary">Change the color for the background here</string>
 
@@ -20,6 +21,6 @@
     <string name="menuColor_title">Menu color</string>
     <string name="menuColor_summary">Change the color for the menu here</string>
 
-    <!-- Sync Preferences -->
+    <!-- Google Maps Preferences -->
     <string name="google_maps_zoom_title">Zoom level</string>
 </resources>
